--- a/part2.html
+++ b/part2.html
@@ -5,7 +5,79 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="css/styles_part2.css" />
+    <link rel="stylesheet" href="css/weather-icons-wind.css" />
+    <link rel="stylesheet" href="css/weather-icons-wind.min.css" />
+    <link rel="stylesheet" href="css/weather-icons.css" />
+    <link rel="stylesheet" href="css/weather-icons.min.css" />
     <title>Home work 7. Task 2</title>
   </head>
-  <body></body>
+  <body>
+    <main>
+      <h1>CSS Weather Forecast <i class="wi wi-sunrise"></i></h1>
+      <ul>
+        <li class="medium blue">
+          <p>Lisbon</p>
+          <p>21<i class="wi wi-celsius"></i> <i class="wi wi-day-sunny"></i></p>
+        </li>
+        <li class="small aquamarine">
+          <p>Paris</p>
+          <p>11<i class="wi wi-celsius"></i> <i class="wi wi-showers"></i></p>
+        </li>
+        <li class="small purple">
+          <p>Belgrad</p>
+          <p>
+            15<i class="wi wi-celsius"></i> <i class="wi wi-day-cloudy"></i>
+          </p>
+        </li>
+        <li class="small red">
+          <p>Moscow</p>
+          <p>
+            21<i class="wi wi-celsius"></i>
+            <i class="wi wi-day-cloudy-high"></i>
+          </p>
+        </li>
+        <li class="small orange">
+          <p>Tel Aviv</p>
+          <p>32<i class="wi wi-celsius"></i> <i class="wi wi-hot"></i></p>
+        </li>
+        <li class="small yellow">
+          <p>Cair</p>
+          <p>21<i class="wi wi-celsius"></i> <i class="wi wi-day-sunny"></i></p>
+        </li>
+        <li class="small lite-green">
+          <p>New York</p>
+          <p>
+            17<i class="wi wi-celsius"></i>
+            <i class="wi wi-day-storm-showers"></i>
+          </p>
+        </li>
+        <li class="small grey">
+          <p>New Delhi</p>
+          <p>17<i class="wi wi-celsius"></i> <i class="wi wi-rain-wind"></i></p>
+        </li>
+        <li class="medium pink">
+          <p>San Francisco</p>
+          <p>
+            15<i class="wi wi-celsius"></i>
+            <i class="wi wi-day-sunny-overcast"></i>
+          </p>
+        </li>
+        <li class="small green">
+          <p>Tokyo</p>
+          <p>
+            8<i class="wi wi-celsius"></i> <i class="wi wi-night-clear"></i>
+          </p>
+        </li>
+        <li class="large violet">
+          <p>Sydney</p>
+          <p>
+            25<i class="wi wi-celsius"></i> <i class="wi wi-night-cloudy"></i>
+          </p>
+        </li>
+      </ul>
+      <p>
+        Have a nice day and don't forget umbrella if you are in New Delhi now!
+      </p>
+    </main>
+  </body>
 </html>
